--- a/CulturalShop_Server/src/main/resources/application.properties
+++ b/CulturalShop_Server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=CulturalShop_back
+spring.application.name=CulturalShop_Server
 spring.mvc.static-path-pattern= /**
-wechat.mini.appid=wx92cf6b26e3a976aa
-wechat.mini.secret=6c773d62e8ff74780dd1d4527784015c
+wechat.mini.appid=
+wechat.mini.secret=
 mybatis.configuration.map-underscore-to-camel-case=true
